Fixes Event pages on mobile devices

--- a/_scss/templates/_event-section2.scss
+++ b/_scss/templates/_event-section2.scss
@@ -2,7 +2,7 @@
   @include display_flex();
   @include flex_flex-direction(column);
   @include flex_justify-content(start);
-  padding: 25px 10px;
+  padding: 0 10px 25px;
   line-height: 1.8rem;
 
   @include mq($from: tablet) {
@@ -46,11 +46,18 @@
 
     &-left,
     &-right {
-      @include flex_flex(1 0 0);
+      @include display_flex();
+      @include flex_flex-direction(column);
+      @include flex_justify-content(center);
+      @include flex_align-items(center);
+      /* @include flex_flex(1 0 0); */
       margin: 15px 0;
       min-height: 0;
 
       @include mq($from: tablet) {
+        @include flex_flex-direction(column);
+        @include flex_justify-content(center);
+        @include flex_align-items(flex-start);
         @include flex_flex(1 1 50%);
         margin: 0 30px;
       }
